force-app/main/default/objects/Design_Standards__c/Design_Standards__c.object-meta.xml
<CustomObject>
    <label>Design Standards</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Design Standards Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Design Standards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>