force-app/main/default/objects/Design_Standards__c/fields/Color_Codes__c.field-meta.xml
<CustomField>
    <fullName>Color_Codes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Color Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>