force-app/main/default/objects/Design_Standards__c/fields/Color_Schemes__c.field-meta.xml
<CustomField>
    <fullName>Color_Schemes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Color Schemes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>