force-app/main/default/objects/Design_Standards__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Look up relationship to the Project Object.</description>
    <label>Project</label>
    <referenceTo>TASKRAY__Project__c</referenceTo>
    <relationshipLabel>Design Standards</relationshipLabel>
    <relationshipName>Design_Standards</relationshipName>
    <type>Lookup</type>
</CustomField>