force-app/main/default/objects/Design_Standards__c/fields/Space__c.field-meta.xml
<CustomField>
    <fullName>Space__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Look up relationship to the Space Object.</description>
    <label>Space</label>
    <referenceTo>Space__c</referenceTo>
    <relationshipLabel>Design Standards</relationshipLabel>
    <relationshipName>Design_Standards</relationshipName>
    <type>Lookup</type>
</CustomField>