force-app/main/default/objects/Design_Standards__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Adjust</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Drafted</fullName>
                <isActive>false</isActive>
                <label>Drafted</label>
            </value>
            <value>
                <fullName>Not Approved</fullName>
                <isActive>false</isActive>
                <label>Not Approved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>