force-app/main/default/objects/Design_Standards__c/fields/TaskRay_Project__c.field-meta.xml
<CustomField>
    <fullName>TaskRay_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to Taskray project</description>
    <label>TaskRay Project</label>
    <referenceTo>TASKRAY__Project__c</referenceTo>
    <relationshipLabel>Design Standards (TaskRay Project)</relationshipLabel>
    <relationshipName>Design_Standards1</relationshipName>
    <type>Lookup</type>
</CustomField>