force-app/main/default/objects/Design_Standards__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Color_Codes__c</columns>
    <columns>Color_Schemes__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>TaskRay_Project__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>