force-app/main/default/objects/Design_Standards__c/listViews/My_Design_Standards.listView-meta.xml
<ListView>
    <fullName>My_Design_Standards</fullName>
    <columns>NAME</columns>
    <columns>Color_Codes__c</columns>
    <columns>Color_Schemes__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>TaskRay_Project__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Design Standards</label>
</ListView>